--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,48 @@
 <html>
 <head>
   <title>QueryReportDemo</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="padding: 30px;">
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="container-fluid">
+            <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
+            <a href="#" class="brand">Title</a>
 
-<%= yield %>
+            <div class="nav-collapse collapse navbar-responsive-collapse">
+              <ul class="nav">
+                <li class="active">
+                  <a href="/">Home</a>
+                </li>
+                <li>
+                  <%= link_to 'Invoices', invoices_path %>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="hero-unit">
+        <h1>
+          Query report demo
+        </h1>
+        <br>
+        <p><a class="btn btn-primary btn-large" href="ashrafuzzaman.github.io/query_report">Fork query report</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <%= yield %>
+  </div>
+</div>
 
 </body>
 </html>
