Added user table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="padding: 30px;">
+<a href="https://github.com/ashrafuzzaman/query_report"><img style="position: absolute; top: 0; left: 0; border: 0;"
+                                                             src="/assets/forkme_left_orange_ff7600.png"
+                                                             alt="Fork me on GitHub"></a>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span12">
@@ -35,8 +38,6 @@
         <h1>
           Query report demo
         </h1>
-        <br>
-        <p><a class="btn btn-primary btn-large" href="ashrafuzzaman.github.io/query_report">Fork query report</a></p>
       </div>
     </div>
   </div>
