--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="padding: 30px;">
-<a href="https://github.com/ashrafuzzaman/query_report"><img style="position: absolute; top: 0; left: 0; border: 0;"
-                                                             src="/assets/forkme_left_orange_ff7600.png"
-                                                             alt="Fork me on GitHub"></a>
+<a href="https://github.com/ashrafuzzaman/query_report"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/assets/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span12">
@@ -17,16 +16,12 @@
         <div class="navbar-inner">
           <div class="container-fluid">
             <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
-            <a href="#" class="brand">Title</a>
+            <!--<a href="#" class="brand">Title</a>-->
 
             <div class="nav-collapse collapse navbar-responsive-collapse">
               <ul class="nav">
-                <li class="active">
-                  <a href="/">Home</a>
-                </li>
-                <li>
-                  <%= link_to 'Invoices', invoices_path %>
-                </li>
+                <li class="<%= 'active' if current_page?(invoices_path) %>"><%= link_to 'Invoices', invoices_path %></li>
+                <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to 'Users', users_path %></li>
               </ul>
             </div>
 
@@ -42,6 +37,8 @@
     </div>
   </div>
   <div class="row-fluid">
+    <%= raw @html_code %>
+    <br>
     <%= yield %>
   </div>
 </div>
