Working on emailing

--- a/app/views/layouts/_email_modal.html.erb
+++ b/app/views/layouts/_email_modal.html.erb
@@ -6,21 +6,15 @@
         <h4 class="modal-title" id="myModalLabel">Email report</h4>
       </div>
       <div class="modal-body">
-        <form class="form-horizontal" role="form">
+        <form role="form">
           <div class="form-group">
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="email-to" placeholder="Email">
-            </div>
+            <input type="email" class="form-control" id="email-to" placeholder="Email" style="width: 98%">
           </div>
           <div class="form-group">
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="email-subject" placeholder="Subject">
-            </div>
+            <input type="text" class="form-control" id="email-subject" placeholder="Subject" style="width: 98%">
           </div>
           <div class="form-group">
-            <div class="col-sm-10">
-              <textarea class="form-control" id="mail-message" placeholder="Message"></textarea>
-            </div>
+            <textarea class="form-control" id="mail-message" placeholder="Message" style="width: 98%"></textarea>
           </div>
         </form>
       </div>
