Added send grid

--- a/app/views/layouts/_email_modal.html.erb
+++ b/app/views/layouts/_email_modal.html.erb
@@ -14,7 +14,7 @@
             <input type="text" class="form-control" id="email-subject" placeholder="Subject" style="width: 98%">
           </div>
           <div class="form-group">
-            <textarea class="form-control" id="mail-message" placeholder="Message" style="width: 98%"></textarea>
+            <textarea class="form-control" id="mail-message" rows="10" placeholder="Message" style="width: 98%"></textarea>
           </div>
         </form>
       </div>
